# julia-ml-demo

./: Dockerfile  Manifest.toml  Project.toml  README.md  pyproject.toml
interoperability/: julia_from_python.py  python_from_julia.jl
