[tool.poetry]
name = "julia-ml-demo"
version = "0.1.0"
description = ""
authors = ["Viktor Hansen <vikhan91@gmail.com>"]
readme = "README.md"
packages = [{include = "julia_ml_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
julia = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
